--- a/index.html
+++ b/index.html
@@ -11,11 +11,11 @@
   
   <section>
     <div class="card" style="width: 18rem;">
-      <img src="..." class="card-img-top" alt="...">
+      <img src="./assets/img/sass.png" class="card-img-top" alt="...">
       <div class="card-body">
         <h5 class="card-title">Card title</h5>
         <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-        <a href="#" class="btn btn-primary">Go somewhere</a>
+        <a href="#" class="btn btn-pinkNew">Go somewhere</a>
       </div>
     </div>
   </section>
