--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <div class="card" style="width: 18rem;">
       <img src="./assets/img/sass.png" class="card-img-top" alt="sass logo">
       <div class="card-body">
-        <h5 class="card-title text-white">Card title</h5>
+        <h5 class="card-title text-pinkNew">Card title</h5>
         <p class="card-text text-white">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
         <a href="#" class="btn btn-pinkNew text-white">Go somewhere</a>
       </div>
